Re-order all names list, add ordered by column denoter in table head

--- a/app/views/v5/l2/users/view/all-2.html
+++ b/app/views/v5/l2/users/view/all-2.html
@@ -15,10 +15,12 @@
 
     <a href="../add/start" class="govuk-button listing-page">Add a user</a>
 
+    {% include "./includes/sorting-filtering.html" %}
+
     <table class="govuk-table">
         <thead class="govuk-table__head">
             <tr class="govuk-table__row">
-                <th scope="col" class="govuk-table__header govuk-!-width-one-third">Name</th>
+                <th scope="col" class="govuk-table__header govuk-!-width-one-third">Name <span class="govuk-sorted-by">(Currently sorted by name, a-z)</span></th>
                 <th scope="col" class="govuk-table__header govuk-!-width-one-third">Organisation</th>
                 <th scope="col" class="govuk-table__header">Status</th>
             </tr>
@@ -26,15 +28,27 @@
 
         <tbody class="govuk-table__body">
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Jon Newsome</a></th>
-                <td class="govuk-table__cell">Capita</td>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Brian Deane</a></th>
+                <td class="govuk-table__cell">Remploy</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Bruce Sandison</a></th>
+                <td class="govuk-table__cell">G4S</td>
                 <td class="govuk-table__cell">Access expired</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Chris Whyte</a></th>
-                <td class="govuk-table__cell">Capita</td>
-                <td class="govuk-table__cell">Invite sent</td>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Carl Shutt</a></th>
+                <td class="govuk-table__cell">Remploy</td>
+                <td class="govuk-table__cell ">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Catherine Palmer</a></th>
+                <td class="govuk-table__cell">Remploy</td>
+                <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
@@ -44,44 +58,32 @@
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Matt Hayes</a></th>
-                <td class="govuk-table__cell">G4S</td>
-                <td class="govuk-table__cell">Access expired</td>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Chris Kamara</a></th>
+                <td class="govuk-table__cell">Remploy</td>
+                <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Mick Brown</a></th>
-                <td class="govuk-table__cell">G4S</td>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Chris Whyte</a></th>
+                <td class="govuk-table__cell">Capita</td>
                 <td class="govuk-table__cell">Invite sent</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">April Vokey</a></th>
-                <td class="govuk-table__cell">G4S</td>
-                <td class="govuk-table__cell">Active</td>
-            </tr>
-
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">John Wilson</a></th>
-                <td class="govuk-table__cell">G4S</td>
-                <td class="govuk-table__cell">Active</td>
-            </tr>
-
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Paul Young</a></th>
-                <td class="govuk-table__cell">G4S</td>
-                <td class="govuk-table__cell">Active</td>
-            </tr>
-
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Marina Gibson</a></th>
-                <td class="govuk-table__cell">G4S</td>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David Batty</a></th>
+                <td class="govuk-table__cell">Capita</td>
                 <td class="govuk-table__cell">Access expired</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Jeremy Wade</a></th>
-                <td class="govuk-table__cell">G4S</td>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David Hopkin</a></th>
+                <td class="govuk-table__cell">Remploy</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David Rocastle</a></th>
+                <td class="govuk-table__cell">Remploy</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
         </tbody>
