--- a/app/views/v5/l2/users/view/all-6.html
+++ b/app/views/v5/l2/users/view/all-6.html
@@ -14,10 +14,12 @@
 
     <a href="../add/start" class="govuk-button listing-page">Add a user</a>
 
+    {% include "./includes/sorting-filtering.html" %}
+
     <table class="govuk-table">
         <thead class="govuk-table__head">
             <tr class="govuk-table__row">
-                <th scope="col" class="govuk-table__header govuk-!-width-one-third">Name</th>
+                <th scope="col" class="govuk-table__header govuk-!-width-one-third">Name <span class="govuk-sorted-by">(Currently sorted by name, a-z)</span></th>
                 <th scope="col" class="govuk-table__header govuk-!-width-one-third">Organisation</th>
                 <th scope="col" class="govuk-table__header">Status</th>
             </tr>
@@ -25,20 +27,20 @@
 
         <tbody class="govuk-table__body">
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Carl Shutt</a></th>
-                <td class="govuk-table__cell">Remploy</td>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Massimo Cellino</a></th>
+                <td class="govuk-table__cell">London Borough of Croydon Council</td>
                 <td class="govuk-table__cell ">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Tony Yeboah</a></th>
-                <td class="govuk-table__cell">Remploy</td>
-                <td class="govuk-table__cell ">Active</td>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Matt Hayes</a></th>
+                <td class="govuk-table__cell">G4S</td>
+                <td class="govuk-table__cell">Access expired</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Janet Sheridan</a></th>
-                <td class="govuk-table__cell">Remploy</td>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Mel Sterland</a></th>
+                <td class="govuk-table__cell">Capita</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
 
@@ -49,8 +51,14 @@
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Robert Molenaar</a></th>
-                <td class="govuk-table__cell">Remploy</td>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Mick Brown</a></th>
+                <td class="govuk-table__cell">G4S</td>
+                <td class="govuk-table__cell">Invite sent</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Neville Fickling</a></th>
+                <td class="govuk-table__cell">G4S</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
 
@@ -61,25 +69,19 @@
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David Rocastle</a></th>
-                <td class="govuk-table__cell">Remploy</td>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Norman Hunter</a></th>
+                <td class="govuk-table__cell">Serco</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David White</a></th>
-                <td class="govuk-table__cell">Remploy</td>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Paul Young</a></th>
+                <td class="govuk-table__cell">G4S</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Catherine Palmer</a></th>
-                <td class="govuk-table__cell">Remploy</td>
-                <td class="govuk-table__cell">Active</td>
-            </tr>
-
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Chris Kamara</a></th>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Peter Haddock</a></th>
                 <td class="govuk-table__cell">Remploy</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
