--- a/app/views/v5/l2/users/view/all-8.html
+++ b/app/views/v5/l2/users/view/all-8.html
@@ -13,10 +13,12 @@
 
     <a href="../add/start" class="govuk-button listing-page">Add a user</a>
 
+    {% include "./includes/sorting-filtering.html" %}
+
     <table class="govuk-table">
         <thead class="govuk-table__head">
             <tr class="govuk-table__row">
-                <th scope="col" class="govuk-table__header govuk-!-width-one-third">Name</th>
+                <th scope="col" class="govuk-table__header govuk-!-width-one-third">Name <span class="govuk-sorted-by">(Currently sorted by name, a-z)</span></th>
                 <th scope="col" class="govuk-table__header govuk-!-width-one-third">Organisation</th>
                 <th scope="col" class="govuk-table__header">Status</th>
             </tr>
@@ -24,25 +26,25 @@
 
         <tbody class="govuk-table__body">
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Allan Clarke</a></th>
-                <td class="govuk-table__cell">Serco</td>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Tony Dorigo</a></th>
+                <td class="govuk-table__cell">Capita</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Edward Gray</a></th>
-                <td class="govuk-table__cell">Serco</td>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Tony Yeboah</a></th>
+                <td class="govuk-table__cell">Remploy</td>
+                <td class="govuk-table__cell ">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Trevor Birch</a></th>
+                <td class="govuk-table__cell">London Borough of Croydon Council</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Jonathon Giles</a></th>
-                <td class="govuk-table__cell">Serco</td>
-                <td class="govuk-table__cell">Active</td>
-            </tr>
-
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Donald Revie</a></th>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">William Bremner</a></th>
                 <td class="govuk-table__cell">Serco</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
