--- a/app/views/v5/l2/users/view/all-5.html
+++ b/app/views/v5/l2/users/view/all-5.html
@@ -14,10 +14,12 @@
 
     <a href="../add/start" class="govuk-button listing-page">Add a user</a>
 
+    {% include "./includes/sorting-filtering.html" %}
+
     <table class="govuk-table">
         <thead class="govuk-table__head">
             <tr class="govuk-table__row">
-                <th scope="col" class="govuk-table__header govuk-!-width-one-third">Name</th>
+                <th scope="col" class="govuk-table__header govuk-!-width-one-third">Name <span class="govuk-sorted-by">(Currently sorted by name, a-z)</span></th>
                 <th scope="col" class="govuk-table__header govuk-!-width-one-third">Organisation</th>
                 <th scope="col" class="govuk-table__header">Status</th>
             </tr>
@@ -25,61 +27,61 @@
 
         <tbody class="govuk-table__body">
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Sam Bolton</a></th>
-                <td class="govuk-table__cell">London Borough of Croydon Council</td>
-                <td class="govuk-table__cell">Active</td>
-            </tr>
-
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Alf Masser</a></th>
-                <td class="govuk-table__cell">London Borough of Croydon Council</td>
-                <td class="govuk-table__cell ">Active</td>
-            </tr>
-
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Frank Strandli</a></th>
-                <td class="govuk-table__cell">Remploy</td>
-                <td class="govuk-table__cell ">Active</td>
-            </tr>
-
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Amy Whitlow</a></th>
-                <td class="govuk-table__cell">Remploy</td>
-                <td class="govuk-table__cell">Active</td>
-            </tr>
-
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Peter Haddock</a></th>
-                <td class="govuk-table__cell">Remploy</td>
-                <td class="govuk-table__cell">Active</td>
-            </tr>
-
-            <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">John McClelland</a></th>
                 <td class="govuk-table__cell">Remploy</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Debbie Kerr</a></th>
-                <td class="govuk-table__cell">Remploy</td>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">John McKenzie</a></th>
+                <td class="govuk-table__cell">London Borough of Croydon Council</td>
+                <td class="govuk-table__cell">Access expired</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">John Wilson</a></th>
+                <td class="govuk-table__cell">G4S</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Bill Fotherby</a></th>
-                <td class="govuk-table__cell">Remploy</td>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Jon Newsome</a></th>
+                <td class="govuk-table__cell">Capita</td>
+                <td class="govuk-table__cell">Access expired</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Ken Bates</a></th>
+                <td class="govuk-table__cell">London Borough of Croydon Council</td>
+                <td class="govuk-table__cell ">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Lee Chapman</a></th>
+                <td class="govuk-table__cell">Capita</td>
                 <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Leslie Silver</a></th>
+                <td class="govuk-table__cell">London Borough of Croydon Council</td>
+                <td class="govuk-table__cell">Invite sent</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Manny Cussins</a></th>
+                <td class="govuk-table__cell">London Borough of Croydon Council</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Marina Gibson</a></th>
+                <td class="govuk-table__cell">G4S</td>
+                <td class="govuk-table__cell">Access expired</td>
             </tr>
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Mary Hennigan</a></th>
-                <td class="govuk-table__cell">Remploy</td>
-                <td class="govuk-table__cell">Active</td>
-            </tr>
-
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David Weatherall</a></th>
                 <td class="govuk-table__cell">Remploy</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
