--- a/app/views/v5/l2/users/view/all.html
+++ b/app/views/v5/l2/users/view/all.html
@@ -10,163 +10,6 @@
 
 
 {% block content %}
-    {% set sortFilterHtml %}
-        <form action="all-sorted" method="post" id="search-refine" class="govuk-grid-row govuk-!-margin-right-0 govuk-!-margin-left-0 govuk-sort-filter">
-            <fieldset class="govuk-grid-column-one-half govuk-fieldset">
-                <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-                    Filter results
-                </legend>
-
-                {{ govukSelect({
-                    id: "filterorg",
-                    name: "filterorg",
-                    label: {
-                        text: "Organisation"
-                    },
-                    items: [
-                        {
-                            value: "",
-                            text: "All organisations"
-                        },
-                        {
-                            value: "Capita",
-                            text: "Capita"
-                        },
-                        {
-                            value: "G4S",
-                            text: "G4S"
-                        },
-                        {
-                            value: "London Borough of Croydon Council",
-                            text: "London Borough of Croydon Council"
-                        },
-                        {
-                            value: "Remploy",
-                            text: "Remploy"
-                        },
-                        {
-                            value: "Serco",
-                            text: "Serco"
-                        }
-                    ]
-                }) }}
-
-                {{ govukSelect({
-                    id: "filterstatus",
-                    name: "filterstatus",
-                    label: {
-                        text: "Status"
-                    },
-                    items: [
-                        {
-                            value: "",
-                            text: "All statuses"
-                        },
-                        {
-                            value: "active",
-                            text: "Active"
-                        },
-                        {
-                            value: "inactive",
-                            text: "Inactive"
-                        },
-                        {
-                            value: "invite sent",
-                            text: "Invite sent"
-                        },
-                        {
-                            value: "invite expired",
-                            text: "Invite expired"
-                        }
-                    ]
-                }) }}
-            </fieldset>
-
-            <fieldset class="govuk-grid-column-one-half govuk-fieldset">
-                <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-                    Sort results
-                </legend>
-
-                {{ govukSelect({
-                    id: "sort-order",
-                    name: "sort-order",
-                    label: {
-                        text: "Sort by"
-                    },
-                    items: [
-                        {
-                            value: "firstname",
-                            text: "First name",
-                            selected: true
-                        },
-                        {
-                            value: "lastname",
-                            text: "Last name"
-                        },
-                        {
-                            value: "organisation",
-                            text: "Organisation"
-                        },
-                        {
-                            value: "status",
-                            text: "Status"
-                        }
-                    ]
-                }) }}
-
-                {{ govukRadios({
-                    classes: "govuk-radios--inline govuk-radios--small",
-                    idPrefix: "sort-order",
-                    name: "sort-order",
-                    fieldset: {
-                        legend: {
-                            text: "Sort order",
-                            isPageHeading: false
-                        },
-                        classes: "sort-order-1"
-                    },
-                    items: [
-                        {
-                            value: "az",
-                            text: "A-Z"
-                        },
-                        {
-                            value: "za",
-                            text: "Z-A"
-                        }
-                    ]
-                }) }}
-
-                {{ govukRadios({
-                    classes: "govuk-radios--inline govuk-radios--small",
-                    idPrefix: "sort-order2",
-                    name: "sort-order2",
-                    fieldset: {
-                        legend: {
-                            text: "Sort order",
-                            isPageHeading: false
-                        },
-                        classes: "sort-order-2 is_hidden"
-                    },
-                    items: [
-                        {
-                            value: "active",
-                            text: "Active ... Invite expired"
-                        },
-                        {
-                            value: "expired",
-                            text: "Invite expired ... Active"
-                        }
-                    ]
-                }) }}
-            </fieldset>
-
-            <button class="govuk-button govuk-filters-button" data-module="govuk-button">
-                Refine results
-            </button>
-        </form>
-    {% endset %}
-
     <div class="govuk-width-container">
         <h1 class="govuk-heading-l listing-page">Users</h1>
 
@@ -174,10 +17,7 @@
             Add a user
         </a>
 
-        {{ govukDetails({
-            summaryText: "Filter and sort users",
-            html: sortFilterHtml
-        }) }}
+        {% include "./includes/sorting-filtering.html" %}
 
         <table class="govuk-table">
             <thead class="govuk-table__head">
@@ -208,62 +48,62 @@
                 {% endif %}
 
                 <tr class="govuk-table__row">
-                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David Batty</a></th>
-                    <td class="govuk-table__cell">Capita</td>
-                    <td class="govuk-table__cell">Access expired</td>
-                </tr>
-
-                <tr class="govuk-table__row">
-                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gary Speed</a></th>
-                    <td class="govuk-table__cell">Capita</td>
-                    <td class="govuk-table__cell">Access expired</td>
-                </tr>
-
-                <tr class="govuk-table__row">
-                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gordon Strachan</a></th>
-                    <td class="govuk-table__cell">Capita</td>
-                    <td class="govuk-table__cell">Invite sent</td>
-                </tr>
-
-                <tr class="govuk-table__row">
-                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gary McAllister</a></th>
-                    <td class="govuk-table__cell">Capita</td>
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Allan Clarke</a></th>
+                    <td class="govuk-table__cell">Serco</td>
                     <td class="govuk-table__cell">Active</td>
                 </tr>
 
                 <tr class="govuk-table__row">
-                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Tony Dorigo</a></th>
-                    <td class="govuk-table__cell">Capita</td>
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Albert Morris</a></th>
+                    <td class="govuk-table__cell">London Borough of Croydon Council</td>
                     <td class="govuk-table__cell">Active</td>
                 </tr>
 
                 <tr class="govuk-table__row">
-                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Mel Sterland</a></th>
-                    <td class="govuk-table__cell">Capita</td>
-                    <td class="govuk-table__cell">Active</td>
-                </tr>
-
-                <tr class="govuk-table__row">
-                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Rod Wallace</a></th>
-                    <td class="govuk-table__cell">Capita</td>
-                    <td class="govuk-table__cell">Active</td>
-                </tr>
-
-                <tr class="govuk-table__row">
-                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Lee Chapman</a></th>
-                    <td class="govuk-table__cell">Capita</td>
-                    <td class="govuk-table__cell">Active</td>
-                </tr>
-
-                <tr class="govuk-table__row">
-                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Steve Hodge</a></th>
-                    <td class="govuk-table__cell">Capita</td>
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Alf Masser</a></th>
+                    <td class="govuk-table__cell">London Borough of Croydon Council</td>
                     <td class="govuk-table__cell ">Active</td>
                 </tr>
 
                 <tr class="govuk-table__row">
-                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">John Lukic</a></th>
-                    <td class="govuk-table__cell">Capita</td>
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Ali Hamidi</a></th>
+                    <td class="govuk-table__cell">G4S</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Amy Whitlow</a></th>
+                    <td class="govuk-table__cell">Remploy</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Andy Radrizzani</a></th>
+                    <td class="govuk-table__cell">London Borough of Croydon Council</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">April Vokey</a></th>
+                    <td class="govuk-table__cell">G4S</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Bill Fotherby</a></th>
+                    <td class="govuk-table__cell">London Borough of Croydon Council</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Bill Fotherby</a></th>
+                    <td class="govuk-table__cell">Remploy</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Bob Nudd</a></th>
+                    <td class="govuk-table__cell">G4S</td>
                     <td class="govuk-table__cell ">Active</td>
                 </tr>
             </tbody>
