--- a/app/views/v5/l2/users/view/g4s.html
+++ b/app/views/v5/l2/users/view/g4s.html
@@ -20,10 +20,12 @@
         <button type="submit" class="govuk-button listing-page">Add a user</button>
     </form>
 
+    {% include "./includes/sorting-filtering-org.html" %}
+
     <table class="govuk-table">
         <thead class="govuk-table__head">
         <tr class="govuk-table__row">
-            <th scope="col" class="govuk-table__header govuk-!-width-one-third">Name</th>
+            <th scope="col" class="govuk-table__header govuk-!-width-one-third">Name <span class="govuk-sorted-by">(Currently sorted by name, a-z)</span></th>
             <th scope="col" class="govuk-table__header govuk-!-width-one-third">Email address</th>
             <th scope="col" class="govuk-table__header">Status</th>
         </tr>
