--- a/app/views/v5/l3/register/email.html
+++ b/app/views/v5/l3/register/email.html
@@ -20,6 +20,28 @@
     <table role="presentation" class="content" align="center" cellpadding="0" cellspacing="0" border="0" style="border-collapse: collapse;max-width: 580px;width: 100% !important;" width="100%">
         <tbody>
             <tr>
+                <td height="30"><br></td>
+            </tr>
+
+            <tr>
+                <td>
+                    <span style="font-family: Helvetica, Arial, sans-serif; margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
+                        To: {{ data['prototype-firstname'] }} {{ data['prototype-lastname'] }}<br>
+                        From: DWP Authenticate<br>
+                        Subject: Register your {{ data['prototype-service'] }} account
+                    </span>
+                </td>
+            </tr>
+
+            <tr>
+                <td height="30"><br></td>
+            </tr>
+        </tbody>
+    </table>
+
+    <table role="presentation" class="content" align="center" cellpadding="0" cellspacing="0" border="0" style="border-collapse: collapse;max-width: 580px;width: 100% !important;" width="100%">
+        <tbody>
+            <tr>
                 <td>
                     <header class="govuk-header" role="banner" data-module="govuk-header">
                         <div class="govuk-header__container govuk-width-container">
@@ -55,7 +77,7 @@
 
                 <td style="font-family: Helvetica, Arial, sans-serif; font-size: 19px; line-height: 1.315789474; max-width: 560px;">
                     <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
-                        Dear Phil Steer
+                        Dear {{ data['prototype-firstname'] }} {{ data['prototype-lastname'] }}
                     </p>
 
                     <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
@@ -100,7 +122,7 @@
                     </h2>
 
                     <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
-                        If you have any problems registering, contact {% if data['prototype-service'] == "HTDS" %}the HTDS Support Team{% elseif data['prototype-service'] == "PRaP" %}the PRaP Operational Support Team{% endif %}
+                        If you have any problems registering, contact {% if data['prototype-service'] == "HTDS" %}the HTDS Support Team{% elseif data['prototype-service'] == "PRaP" %}the PRaP Operational Support Team{% endif %}.
                     </p>
 
                     <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
@@ -113,16 +135,19 @@
                     </p>
 
                     <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
-                        Telephone:
+                        Telephone:<br>
+                        <strong>
                         {% if data['prototype-service'] == "HTDS" %}
-                            <a href="tel:03456045406" class="govuk-link">0345 000000</a>
+                            0345 000000
                         {% elseif data['prototype-service'] == "PRaP" %}
-                            <a href="tel:03456045406" class="govuk-link">0345 604 5406</a>
+                            0345 604 5406
                         {% endif %}
+                        </strong>
                     </p>
 
                     <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
-                        Opening times: Monday to Friday: 9:00am to 4:00pm
+                        Opening times:<br>
+                        <strong>Monday to Friday: 9:00am to 4:00pm</strong>
                     </p>
 
                     <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
